# libsync

./: Makefile.am  configure.ac
src/: Makefile.am
test/: Makefile.am
